@@ -2,9 +2,10 @@
 @prefix foaf:  <http://xmlns.com/foaf/0.1/> .
 @prefix rdf:   <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
 @prefix rdfs:  <http://www.w3.org/2000/01/rdf-schema#> .
-@prefix lv2:   <http://lv2plug.in/ns/lv2core#> .
-@prefix lv2ev: <http://lv2plug.in/ns/ext/event#> .
-@prefix lv2ui: <http://lv2plug.in/ns/extensions/ui#> .
+
+@prefix lv2:     <http://lv2plug.in/ns/lv2core#> .
+@prefix lv2ui:   <http://lv2plug.in/ns/extensions/ui#> .
+@prefix lv2atom: <http://lv2plug.in/ns/ext/atom#> .
 
 <http://drumkv1.sourceforge.net/lv2>
 	a lv2:Plugin, lv2:InstrumentPlugin ;
@@ -19,9 +20,10 @@
 	lv2:extensionData <http://lv2plug.in/ns/ext/state#interface> ;
 	lv2ui:ui <http://drumkv1.sourceforge.net/lv2#ui> ;
 	lv2:port [
-		a lv2:InputPort, lv2ev:EventPort ;
-		lv2ev:supportsEvent <http://lv2plug.in/ns/ext/midi#MidiEvent> ;
-		lv2:index 0;
+		a lv2:InputPort, lv2atom:AtomPort ;
+		lv2atom:bufferType lv2atom:Sequence ;
+		lv2atom:supports <http://lv2plug.in/ns/ext/midi#MidiEvent> ;
+		lv2:index 0 ;
 		lv2:symbol "in";
 		lv2:name "MIDI In";
 	] ;
